[package]
name = "hothot-core"
version = "0.1.0"
edition = "2021"
description = "A simple software make your machine hot!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.8.5"
num_cpus = "1.13.1"
stoppable_thread = "0.2.1"
ctrlc = "3.2.1"
colored = "2.0.0"
