[package]
name = "hothot-core"
authors = ["umoho"]
version = "0.1.1"
edition = "2021"
description = "A simple software make your machine hot!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.8.5"
num_cpus = "1.13.1"
stoppable_thread = "0.2.1"
ctrlc = "3.2.1"
colored = "2.0.0"
toml = "0.5.8"
systemstat = "0.1.10"

[dependencies.clap]
version = "3.1.8"
features = ["derive"]
